# zettlab-ainas-iot

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-Hans.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
custom_components/zettlab_ainas/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  entity.py  light.py  manifest.json  select.py  sensor.py  strings.json  switch.py
custom_components/zettlab_ainas/translations/: zh-Hans.json
docs/: configuration.md  configuration.zh-Hans.md  entities.md  entities.zh-Hans.md  troubleshooting.md  troubleshooting.zh-Hans.md
scripts/: live_check.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_entities.py  test_flow_extra.py  test_init.py
